<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/toolbarLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rocks">

    <android.support.v7.widget.CardView
        android:id="@+id/view2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="12dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@drawable/rocks"></ImageView>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/fullname_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/default_fullname"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionMode.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/username_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/default_username"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintBottom_toTopOf="@+id/followingq_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname_view" />

    <TextView
        android:id="@+id/postsq_view"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/default_q"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/posts_view"
        app:layout_constraintEnd_toEndOf="@+id/posts_view"
        app:layout_constraintStart_toStartOf="@+id/posts_view" />

    <TextView
        android:id="@+id/posts_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/text_posts"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small.Inverse"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/following_view" />

    <TextView
        android:id="@+id/followingq_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/default_q"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/following_view"
        app:layout_constraintEnd_toEndOf="@+id/following_view"
        app:layout_constraintStart_toStartOf="@+id/following_view" />

    <TextView
        android:id="@+id/following_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/text_following"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small.Inverse"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/followers_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:text="@string/text_followers"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small.Inverse"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/following_view" />

    <TextView
        android:id="@+id/followersq_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/default_q"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/followers_view"
        app:layout_constraintEnd_toEndOf="@+id/followers_view"
        app:layout_constraintStart_toStartOf="@+id/followers_view" />
</android.support.constraint.ConstraintLayout>